# nbody

./: CMakeLists.txt
src/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  nbody
src/physics/: Octree.cpp  Octree.h  Particle.h  Simulation.h
src/render/: Renderer.cpp  Renderer.h
src/util/: Camera.h
